Fix header brands on mobile phone, Fix geoip for varnish + fix autoset store id

--- a/reactjs-pwa/packages/siminia/src/simi/App/Bianca/Footer/footer.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/Bianca/Footer/footer.scss
@@ -205,7 +205,7 @@ $errorFormBgColor: #ece2e2;
             margin-top: 44px;
             .google-play{
                 width: 116px;
-                height: 38px;
+                // height: 38px;
                 margin-bottom: 20px;
                 img{
                     width: 100%;
@@ -214,7 +214,7 @@ $errorFormBgColor: #ece2e2;
             }
             .app-store{
                 width: 116px;
-                height: 40.4px;
+                // height: 40.4px;
                 img{
                     width: 100%;
                     height: 100%;
@@ -294,11 +294,11 @@ $errorFormBgColor: #ece2e2;
                 margin-top: 12px;
                 .google-play{
                     width: 100.69px;
-                    height: 30px;
+                    // height: 30px;
                 }
                 .app-store{
                     width: 100.69px;
-                    height: 30px;
+                    // height: 30px;
                     margin-top: 9px;
                 }
             }
